# ChessSFML

./: .cmake-format.json  .gitignore  CMakeLists.txt
Include/Chess/: ChessGrid.h  ChessPiece.h  ChessPieceType.h  ChessTile.h
Include/Chess/ChessPiece/: Pawn.h
Source/Chess/: Main.c
Source/ChessLib/: ChessGrid.c  ChessPieceType.c
